# author-lab-sample

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ETHICS-AND-DERIVATION-DISCLOSURE-POLICY.md  README.md  RIGHTS-AND-LICENSING-POLICY.md  SECURITY.md  author-lab-project-manifest.json  pyproject.toml  repository-component-status-register.json  repository-placeholder-register.json  source-material-storage-and-ingestion-register.jsonl  validation-constraints.txt
.github/: CODEOWNERS  OWNER-TEMPLATE-LOCK-CHECKLIST.md  PULL_REQUEST_TEMPLATE.md
agent-skills/: README.md
approved-publications/: AGENTS.md  README.md  approved-publication-manifest.jsonl
author-model-evaluations/: README.md
author-model-experiments/: AGENTS.md  README.md
derived-author-comparisons/: README.md
derived-author-personas/: README.md
documentation/: README.md  complete-repository-file-and-directory-reference.md  derived-author-creation-methodology.md  glossary-of-author-lab-terms.md  naming-versioning-and-file-conventions.md  new-author-lab-project-bootstrap-prompt.md  pre-real-run-complete-repository-design.md  pre-real-run-remediation-design.md  provenance-and-evidence-policy.md  publication-and-editorial-approval-policy.md  repository-architecture-and-data-flow.md  runtime-adapter-contract.md  source-author-research-methodology.md  template-repository-governance-and-backup.md  writing-work-item-state-machine.md
publication-site/: README.md  publication-site-configuration.json
repository-automation-scripts/: README.md  (+20 more)
(+311 files in other folders)
